--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<!--<android.support.constraint.ConstraintLayout-->
+<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--xmlns:tools="http://schemas.android.com/tools"-->
+<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--tools:context="me.projects.android.eyetwister.MainActivity">-->
+
+
+<!--</android.support.constraint.ConstraintLayout>-->
+
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:custom="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="me.projects.android.eyetwister.MainActivity">
-
-    <TextView
-            android:layout_width="wrap_content"
+>
+    <me.projects.android.eyetwister.customviews.MyView
+            android:id="@+id/Pie"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:padding="10dp"
+            android:layout_weight="100"
+            custom:showText="true"
+            custom:labelHeight="20dp"
+            custom:labelWidth="110dp"
+            custom:labelY="85dp"
+            custom:labelPosition="left"
+            custom:highlightStrength="1.12"
+            android:background="@android:color/white"
+            custom:pieRotation="0"
+            custom:labelColor="@android:color/black"
+            custom:autoCenterPointerInSlice="true"
+            custom:pointerRadius="4dp"
+    />
+    <Button
+            android:id="@+id/Reset"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:text="@string/reset_button"
+    />
+</LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
